Bug 130951 - FILEOPEN: DOCX: picture does not display doc saved by MSWord
Summary: FILEOPEN: DOCX: picture does not display doc saved by MSWord
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: high major
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: Regressions-cairo-speedup
  Show dependency treegraph
 
Reported: 2020-02-26 09:12 UTC by Elmar
Modified: 2021-03-27 00:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
no picture on first page (46.58 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-02-26 09:15 UTC, Elmar
Details
Comparison MSO 2010 and LibreOffice 7.0 master (78.09 KB, image/png)
2020-02-26 09:28 UTC, Xisco Faulí
Details
console logs (34.83 KB, text/plain)
2020-02-26 10:19 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2020-02-26 09:12:58 UTC
Description:
Open a document with picture in first page. the picture does not display (in the original doc, a picture in a later page did show.

Steps to Reproduce:
1. save a document after editing in MS Word
2. open in Writer
3.

Actual Results:
no picture in first page

Expected Results:
should see it.

When open the doc in v6.0 it does display. 



Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

tried with .doc and .docx results the same
Comment 1 Elmar 2020-02-26 09:15:49 UTC
Created attachment 158195 [details]
no picture on first page
Comment 2 Xisco Faulí 2020-02-26 09:28:57 UTC
Created attachment 158196 [details]
Comparison MSO 2010 and LibreOffice 7.0 master
Comment 3 Xisco Faulí 2020-02-26 09:35:53 UTC
Regression introduced by:

author	Armin Le Grand (Collabora) <armin.le.grand@me.com>	2020-02-21 16:58:17 +0100
committer	Armin Le Grand <Armin.Le.Grand@me.com>	2020-02-21 20:16:59 +0100
commit 828504974d70111e4a35b31d579cf42fe660a660 (patch)
tree 4c2f7720b3efaecf55b8fa7b9b3eeccb278160e6
parent 813cde918338bccc4f711230616340cad2c1d4a0 (diff)
tdf#130768 speedup huge pixel graphics Cairo

Bisected with: bibisect-linux64-6.5

Adding Cc: to Armin Le Grand
Comment 4 Julien Nabet 2020-02-26 10:19:30 UTC
Created attachment 158199 [details]
console logs

On Win10 with master sources updated today, I could reproduce this.

I attached console logs if it can help.
Comment 5 Julien Nabet 2020-02-26 10:37:04 UTC
Let's increase the importance since:
- it's a regression
- it concerns all env
- it's not a corner case
Comment 6 Armin Le Grand (collabora) 2020-02-26 17:44:09 UTC
grepping...
Comment 7 Armin Le Grand (collabora) 2020-02-26 18:03:21 UTC
pulled master, but does not buid on win10 currently... make clean, restart...
Comment 8 Armin Le Grand (collabora) 2020-02-26 18:03:58 UTC
did not help...
Comment 9 Armin Le Grand (collabora) 2020-02-26 23:46:56 UTC
solved, was a missing update in cygwin64. either I damaged sth or sth changed that needed an update...
Comment 10 Xisco Faulí 2020-02-27 08:29:59 UTC
attachment 94522 [details] from bug 75331 is also affected by this issue
Comment 11 Xisco Faulí 2020-02-27 09:16:31 UTC
attachment 102915 [details] from bug 81426 is also affected
Comment 12 Armin Le Grand (collabora) 2020-02-27 15:53:20 UTC
FGirst test - set SAL_DISABLE_MM02_GOODIES in shell, start LO -> works. Indeed something here is the reason this goes wrong now.
Comment 13 Armin Le Grand (collabora) 2020-02-27 15:57:53 UTC
Two spaces using SAL_DISABLE_MM02_GOODIES, it's the one in sw\source\core\doc\notxtfrm.cxx - checking...
Comment 14 Armin Le Grand (collabora) 2020-02-27 16:24:40 UTC
Problem identified, possible fiox is at https://gerrit.libreoffice.org/c/core/+/89644
Also added to use fallback for safety reasons.
Comment 15 Commit Notification 2020-02-27 18:26:00 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f58ffce789c15e3849bceb9fe4844d838e9c40e

tdf#130951 Use the correct OutputDevice

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2020-02-28 16:05:47 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 81d982f176751a6d5f13fcb72f425a29fd077c92
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Armin, thanks for fixing this issue!! Closing as VERIFIED FIXED