tdf#130951 Use the correct OutputDevice

In SwViewShell mode maybe isOutputToWindow,
in that cases use GetWin() instead of GetOut()

Change-Id: I181ac436000325f3aa93cd508e468d500a682131